--- a/rust_worker/sedimentology-replayer/Cargo.toml
+++ b/rust_worker/sedimentology-replayer/Cargo.toml
@@ -1,22 +1,22 @@
 [package]
 name = "sedimentology-replayer"
-version = "0.1.0"
-edition = "2021"
+version = { workspace = true }
+edition = { workspace = true }
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-replay-engine = { git = "https://github.com/orca-so/whirlpool-tx-replayer", package = "replay-engine" }
+replay-engine = { path = "../../../whirlpool-tx-replayer/replay-engine" }
 
 mysql = { workspace = true }
 clap = { workspace = true }
 
-ctrlc = "3.4.1"
+ctrlc = { workspace = true }
 
-serde = "*"
-serde_derive = "*"
-serde_json = "1.0.107"
-flate2 = "1.0.27"
-csv = "1.3.0"
-base64 = "0.21.4"
-chrono = "0.4.31"
+serde = { workspace = true }
+serde_derive = { workspace = true }
+serde_json = { workspace = true }
+flate2 = { workspace = true }
+csv = { workspace = true }
+base64 = { workspace = true }
+chrono = { workspace = true }
