--- a/rust_worker/sedimentology-replayer/Cargo.toml
+++ b/rust_worker/sedimentology-replayer/Cargo.toml
@@ -6,7 +6,7 @@ edition = { workspace = true }
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-replay-engine = { path = "../../../whirlpool-tx-replayer/replay-engine" }
+replay-engine = { path = "../../../../qtrade-replayer/whirlpool-tx-replayer/replay-engine" }
 
 mysql = { workspace = true }
 clap = { workspace = true }
